--- a/examples/package.json
+++ b/examples/package.json
@@ -5,22 +5,31 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --progress --colors --config ./webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-jest": "^22.2.2",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.1",
+    "jest": "^22.3.0",
     "react-hot-loader": "^3.1.3",
+    "regenerator-runtime": "^0.11.1",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
   },
@@ -29,10 +38,25 @@
       "env",
       "react",
       "stage-2"
-    ]
+    ],
+    "env": {
+      "test": {
+        "presets": [
+          [
+            "env"
+          ],
+          "react"
+        ]
+      }
+    }
   },
-  "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+  "jest": {
+    "verbose": true,
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
+    "setupFiles": [
+      "./jest.setup.js"
+    ]
   }
 }
